--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -37,8 +37,27 @@ header nav a:hover {
 }
 
 @media (max-width: 768px) {
+  header {
+    padding-inline: 2.5rem;
+  }
+
   header nav {
-    display: none;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: min(75vw, 400px);
+    background-color: var(--light-navy);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(100%);
+    transition: var(--transition);
+  }
+
+  header nav.active {
+    transform: translateX(0);
   }
 
   .hamburger {
@@ -46,8 +65,8 @@ header nav a:hover {
     height: 40px;
     width: 40px;
     padding: 0.2rem;
-    /* border: 1px solid white; */
     cursor: pointer;
+    z-index: 999;
   }
 
   .hamburger .line,
@@ -61,7 +80,7 @@ header nav a:hover {
     background-color: var(--primary);
     margin: 6px 0;
     margin-left: auto;
-    /* transition: var(--transition); */
+    transition: var(--transition);
   }
 
   .hamburger::before {
@@ -85,9 +104,5 @@ header nav a:hover {
   .hamburger.active::after {
     transform: rotate(45deg) translate(-5px, -6px);
     width: 100%;
-  }
-
-  header {
-    padding-inline: 2.5rem;
   }
 }
