--- a/styles/components/projects.css
+++ b/styles/components/projects.css
@@ -28,37 +28,18 @@
 }
 
 #projects .project-image {
-  box-shadow: 0 10px 30px -15px var(--navy);
+  /* box-shadow: 0 10px 30px -15px var(--navy); */
   /* transition: var(--transition); */
   position: relative;
   z-index: 1;
 }
 
-#projects .project-image a {
-  width: 100%;
-  height: 100%;
-  background-color: var(--primary);
-  border-radius: var(--border-radius);
-  vertical-align: middle;
-  z-index: 1;
-}
-
-#projects .project-image a::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: var(--navy);
-  opacity: 60%;
-  z-index: 10;
-  mix-blend-mode: screen;
-}
-
 #projects .project-image img {
   min-height: 400px;
-  border-radius: 10px;
-  box-shadow: 0 2rem 4rem #010824;
+  border-radius: var(--border-radius);
+  /* box-shadow: 0 2rem 4rem #010824; */
   filter: grayscale(100%) contrast(1) brightness(90%);
+  /* object-fit: cover; */
 }
 
 #projects .content h3 {
@@ -91,11 +72,12 @@
 #projects .project-links svg {
   width: 2.2rem;
   height: 2.2rem;
-  /* transition: var(--transition); */
+  transition: var(--transition);
 }
 
 #projects .project-links svg:hover {
-  color: var(--primary);
+  text-shadow: 0 0 5px var(--secondary);
+  transform: translateY(-2px);
 }
 
 #projects .show-more {
