--- a/styles/components/socials.css
+++ b/styles/components/socials.css
@@ -74,7 +74,7 @@
 }
 
 #email .left a:hover {
-  color: var(--primary);
+  text-shadow: 0 0 5px var(--secondary);
   transform: translateY(-2px);
 }
 
